[bazel] Enable bzlmod

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,8 +1,7 @@
 try-import .bazelrc.local
 try-import .bazelrc.windows.local
 
-# Disable bzlmod until we're ready to use it
-common --noenable_bzlmod
+common --enable_bzlmod
 
 # Ensure Windows support is accurate.
 
