--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,6 +1,17 @@
 module(name = "selenium")
 
+bazel_dep(name = "rules_dotnet", version = "0.14.0")
 bazel_dep(name = "rules_ruby", version = "0.8.1")
+
+dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
+dotnet.toolchain(dotnet_version = "7.0.400")
+use_repo(dotnet, "dotnet_toolchains")
+
+selenium_paket = use_extension("//dotnet:paket.nuget_extension.bzl", "nuget_extension")
+use_repo(selenium_paket, "paket.nuget")
+
+register_toolchains("@dotnet_toolchains//:all")
+
 ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
 ruby.toolchain(
     name = "ruby",
@@ -95,4 +106,5 @@ ruby.bundle_fetch(
     gemfile_lock = "//:rb/Gemfile.lock",
 )
 use_repo(ruby, "bundle", "ruby", "ruby_toolchains")
+
 register_toolchains("@ruby_toolchains//:all")
