[bazel] Move rules_rust to MODULE

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,6 +2,7 @@ module(name = "selenium")
 
 bazel_dep(name = "rules_dotnet", version = "0.14.0")
 bazel_dep(name = "rules_ruby", version = "0.8.1")
+bazel_dep(name = "rules_rust", version = "0.40.0")
 
 dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
 dotnet.toolchain(dotnet_version = "7.0.400")
@@ -108,3 +109,20 @@ ruby.bundle_fetch(
 use_repo(ruby, "bundle", "ruby", "ruby_toolchains")
 
 register_toolchains("@ruby_toolchains//:all")
+
+rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
+rust.toolchain(
+    edition = "2021",
+    versions = ["1.76.0"],
+)
+use_repo(rust, "rust_toolchains")
+
+crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
+crate.from_cargo(
+    name = "crates",
+    cargo_lockfile = "//rust:Cargo.lock",
+    manifests = ["//rust:Cargo.toml"],
+)
+use_repo(crate, "crates")
+
+register_toolchains("@rust_toolchains//:all")
