--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,7 +1,10 @@
 module(name = "selenium")
 
+bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
 bazel_dep(name = "platforms", version = "0.0.8")
 bazel_dep(name = "rules_dotnet", version = "0.14.0")
+bazel_dep(name = "rules_java", version = "7.4.0")
+bazel_dep(name = "rules_jvm_external", version = "6.0")
 bazel_dep(name = "rules_python", version = "0.31.0")
 bazel_dep(name = "rules_ruby", version = "0.8.1")
 bazel_dep(name = "rules_rust", version = "0.40.0")
@@ -26,6 +29,7 @@ python.toolchain(python_version = "3.11")
 use_repo(python, "pythons_hub")
 
 pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+
 [
     pip.parse(
         hub_name = "py_dev_requirements",
@@ -39,9 +43,102 @@ pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
         "3.11",
     ]
 ]
+
 use_repo(pip, "py_dev_requirements")
 
 register_toolchains("@pythons_hub//:all")
+
+java_toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")
+use_repo(
+    java_toolchains,
+    "remote_java_tools",
+    "remote_java_tools_darwin_arm64",
+    "remote_java_tools_darwin_x86_64",
+    "remote_java_tools_linux",
+    "remote_java_tools_windows",
+    "remotejdk17_linux",
+    "remotejdk17_linux_s390x",
+    "remotejdk17_macos",
+    "remotejdk17_macos_aarch64",
+    "remotejdk17_win",
+    "remotejdk17_win_arm64",
+)
+
+maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
+maven.install(
+    name = "maven",
+    artifacts = [
+        "com.beust:jcommander:1.82",
+        "com.github.javaparser:javaparser-core:3.25.8",
+        "com.github.spotbugs:spotbugs:4.8.3",
+        "com.github.stephenc.jcip:jcip-annotations:1.0-1",
+        "com.google.code.gson:gson:2.10.1",
+        "com.google.guava:guava:33.0.0-jre",
+        "com.google.auto:auto-common:1.2.2",
+        "com.google.auto.service:auto-service:1.1.1",
+        "com.google.auto.service:auto-service-annotations:1.1.1",
+        "com.google.googlejavaformat:google-java-format:jar:1.19.2",
+        "com.graphql-java:graphql-java:20.2",
+        "com.graphql-java:java-dataloader:3.2.0",
+        "dev.failsafe:failsafe:3.3.2",
+        "io.grpc:grpc-context:1.61.1",
+        "io.lettuce:lettuce-core:6.3.1.RELEASE",
+        "io.netty:netty-buffer:4.1.107.Final",
+        "io.netty:netty-codec-http:4.1.107.Final",
+        "io.netty:netty-codec-http2:4.1.107.Final",
+        "io.netty:netty-common:4.1.107.Final",
+        "io.netty:netty-handler:4.1.107.Final",
+        "io.netty:netty-handler-proxy:4.1.107.Final",
+        "io.netty:netty-transport:4.1.107.Final",
+        "io.opentelemetry:opentelemetry-api:1.35.0",
+        "io.opentelemetry:opentelemetry-context:1.35.0",
+        "io.opentelemetry:opentelemetry-exporter-logging:1.35.0",
+        "io.opentelemetry:opentelemetry-sdk:1.35.0",
+        "io.opentelemetry:opentelemetry-sdk-common:1.35.0",
+        "io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:1.35.0",
+        "io.opentelemetry:opentelemetry-sdk-extension-autoconfigure-spi:1.35.0",
+        "io.opentelemetry:opentelemetry-sdk-testing:1.35.0",
+        "io.opentelemetry:opentelemetry-sdk-trace:1.35.0",
+        "io.opentelemetry.semconv:opentelemetry-semconv:1.23.1-alpha",
+        "io.ous:jtoml:2.0.0",
+        "it.ozimov:embedded-redis:0.7.3",
+        "net.bytebuddy:byte-buddy:1.14.12",
+        "org.htmlunit:htmlunit-core-js:3.11.0",
+        "org.apache.commons:commons-exec:1.3",
+        "org.apache.logging.log4j:log4j-core:2.22.1",
+        "org.assertj:assertj-core:3.25.3",
+        "org.bouncycastle:bcpkix-jdk18on:1.77",
+        "org.eclipse.mylyn.github:org.eclipse.egit.github.core:2.1.5",
+        "org.hsqldb:hsqldb:2.7.2",
+        "org.junit.jupiter:junit-jupiter-api:5.10.2",
+        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
+        "org.junit.jupiter:junit-jupiter-params:5.10.2",
+        "org.junit.platform:junit-platform-launcher:1.10.2",
+        "org.junit.platform:junit-platform-reporting:1.10.2",
+        "org.junit.platform:junit-platform-commons:1.10.2",
+        "org.junit.platform:junit-platform-engine:1.10.2",
+        "org.mockito:mockito-core:5.10.0",
+        "org.mockito:mockito-inline:5.2.0",
+        "org.redisson:redisson:3.26.1",
+        "org.slf4j:slf4j-api:2.0.12",
+        "org.slf4j:slf4j-jdk14:2.0.12",
+        "org.zeromq:jeromq:0.6.0",
+    ],
+    excluded_artifacts = [
+        "org.hamcrest:hamcrest-all",  # Replaced by hamcrest 2
+        "org.hamcrest:hamcrest-core",
+        "io.netty:netty-all",  # Depend on the actual things you need
+    ],
+    fail_if_repin_required = True,
+    fail_on_missing_checksum = True,
+    fetch_sources = True,
+    lock_file = "//java:maven_install.json",
+    repositories = [
+        "https://repo1.maven.org/maven2",
+    ],
+    strict_visibility = True,
+)
+use_repo(maven, "maven")
 
 ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
 ruby.toolchain(
