--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -11,6 +11,7 @@ bazel_dep(name = "rules_dotnet", version = "0.14.0")
 bazel_dep(name = "rules_java", version = "7.4.0")
 bazel_dep(name = "rules_jvm_external", version = "6.0")
 bazel_dep(name = "rules_nodejs", version = "5.8.3")
+bazel_dep(name = "rules_oci", version = "1.0.0")
 bazel_dep(name = "rules_python", version = "0.31.0")
 bazel_dep(name = "rules_ruby", version = "0.8.1")
 bazel_dep(name = "rules_rust", version = "0.40.0")
@@ -70,6 +71,24 @@ selenium_paket = use_extension("//dotnet:paket.nuget_extension.bzl", "nuget_exte
 use_repo(selenium_paket, "paket.nuget")
 
 register_toolchains("@dotnet_toolchains//:all")
+
+oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
+oci.pull(
+    name = "java_image_base",
+    digest = "sha256:161a1d97d592b3f1919801578c3a47c8e932071168a96267698f4b669c24c76d",
+    image = "gcr.io/distroless/java17",
+)
+oci.pull(
+    name = "firefox_standalone",
+    digest = "sha256:b6d8279268b3183d0d33e667e82fec1824298902f77718764076de763673124f",
+    image = "index.docker.io/selenium/standalone-firefox",
+)
+oci.pull(
+    name = "chrome_standalone",
+    digest = "sha256:1b809a961a0a77787a7cccac74ddc5570b7e89747f925b8469ddb9a6624d4ece",
+    image = "index.docker.io/selenium/standalone-chrome",
+)
+use_repo(oci, "chrome_standalone", "firefox_standalone", "java_image_base")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 python.toolchain(
