[bazel] Move buildifier to MODULE

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,6 +5,7 @@ bazel_dep(name = "aspect_rules_esbuild", version = "0.18.0")
 bazel_dep(name = "aspect_rules_js", version = "1.35.0")
 bazel_dep(name = "aspect_rules_ts", version = "2.1.0")
 bazel_dep(name = "bazel_features", version = "1.9.0")
+bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
 bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
 bazel_dep(name = "platforms", version = "0.0.8")
 bazel_dep(name = "rules_dotnet", version = "0.14.0")
