--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,7 @@ jobs:
             name: ci-check
             manifest:
               crates: rust/Cargo.Bazel.lock
-              npm: package-lock.json
-              pypi__pip: py/requirements_lock.txt
-              ruby: rb/.ruby-version
+              rules_ruby~~ruby~ruby: rb/.ruby-version
           repository-cache: true
       - name: Check Bazel targets
         id: check-targets
