[bazel] Fix maven_bom targets

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -124,10 +124,14 @@ use_repo(pip, "py_dev_requirements")
 
 register_toolchains("@pythons_hub//:all")
 
-single_version_override(
+# https://github.com/bazelbuild/rules_jvm_external/pull/1079
+archive_override(
     module_name = "rules_jvm_external",
-    patches = ["//java:rules_jvm_external_javadoc.patch"],
+    integrity = "sha256-yS8Qes1PLbYbe10b1WSgl0Auqn/1Wlxg8O3wSr7a/Sg=",
     patch_strip = 1,
+    patches = ["//java:rules_jvm_external_javadoc.patch"],
+    strip_prefix = "rules_jvm_external-f572a26116c7ef71d8842dd056c2605782f7be8d",
+    urls = ["https://github.com/bazelbuild/rules_jvm_external/archive/f572a26116c7ef71d8842dd056c2605782f7be8d.tar.gz"],
 )
 
 java_toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")
